# discord-enumerator

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: macros.rs  main.rs
src/structs/: Activity.rs  Channel.rs  ChannelTree.rs  ClientStatus.rs  DiscordError.rs  Emoji.rs  Guild.rs  GuildMember.rs  PermissionOverwrite.rs  Presence.rs  Role.rs  User.rs  VoiceState.rs  mod.rs
src/traits/: Snowflake.rs  mod.rs
